# chat-cli

./: Dockerfile  README.md  pyproject.toml
src/: main.py
